# finalfusion-ffi

./: .travis.yml  CMakeLists.txt  CONTRIBUTORS  README  README.md
ci/: script.sh
cpp/: CMakeLists.txt  Embeddings.cc
finalfusion-ffi/: CMakeLists.txt  Cargo.toml
finalfusion-ffi/src/: embeddings.rs  lib.rs  storage.rs  vocab.rs
include/: Embeddings.hh  finalfusion.h
tests/: CMakeLists.txt  embedding_lookup.c  embedding_lookup.cc  matrix_copy.c  mmap_embeddings.c  read_nonexistent_returns_null.c  text_lookup.c  textdims_lookup.c  vocab_test.c  word2vec_lookup.c  write_embeddings.c
